[gd_scene load_steps=3 format=3 uid="uid://b1nvqp1opf5ha"]

[ext_resource type="Script" path="res://levels/ui.gd" id="1_a72rh"]
[ext_resource type="Texture2D" uid="uid://bj628el102j0m" path="res://assets/sprites/ui/arrow.png" id="1_xdp0d"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_a72rh")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ArrowScrollHBox" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(128, 128)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ArrowScrollHBox"]
custom_minimum_size = Vector2(128, 128)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftArrow" type="Area2D" parent="MarginContainer/ArrowScrollHBox/HBoxContainer"]
position = Vector2(68, 64)

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/ArrowScrollHBox/HBoxContainer/LeftArrow"]
texture = ExtResource("1_xdp0d")
flip_h = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MarginContainer/ArrowScrollHBox/HBoxContainer/LeftArrow"]
polygon = PackedVector2Array(-61, -2, -9, -42, -13, -17, 57, -29, 53, -2, 57, 30, -13, 18, -10, 44)

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ArrowScrollHBox"]
custom_minimum_size = Vector2(128, 128)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 10

[node name="RightArrow" type="Area2D" parent="MarginContainer/ArrowScrollHBox/HBoxContainer2"]
position = Vector2(64, 64)

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/ArrowScrollHBox/HBoxContainer2/RightArrow"]
texture = ExtResource("1_xdp0d")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MarginContainer/ArrowScrollHBox/HBoxContainer2/RightArrow"]
polygon = PackedVector2Array(-57, -29, 13, -17, 9, -42, 61, -2, 10, 44, 13, 19, -57, 30, -53, -3)

[node name="SummonHBox" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="UpArrow" type="Area2D" parent="MarginContainer/SummonHBox"]
position = Vector2(64, 64)

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/SummonHBox/UpArrow"]
rotation = -1.5708
texture = ExtResource("1_xdp0d")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MarginContainer/SummonHBox/UpArrow"]
position = Vector2(-64, 65)
polygon = PackedVector2Array(62, -125, 108, -74, 84, -76, 94, -7, 62, -11, 35, -8, 47, -77, 23, -73)

[connection signal="mouse_entered" from="MarginContainer/ArrowScrollHBox/HBoxContainer/LeftArrow" to="." method="_on_left_arrow_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/ArrowScrollHBox/HBoxContainer/LeftArrow" to="." method="_on_left_arrow_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/ArrowScrollHBox/HBoxContainer2/RightArrow" to="." method="_on_right_arrow_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/ArrowScrollHBox/HBoxContainer2/RightArrow" to="." method="_on_right_arrow_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/SummonHBox/UpArrow" to="." method="_on_up_arrow_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/SummonHBox/UpArrow" to="." method="_on_up_arrow_mouse_exited"]
